--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
     "start": "node ./dist/index.js",
-    "build-parser": "pegjs --plugin ./node_modules/ts-pegjs --extra-options-file pegconfig.json -o ./src/parser.ts grammar/dasdpl.pegjs"
+    "build-parser": "pegjs --plugin ./node_modules/ts-pegjs --extra-options-file pegconfig.json -o ./src/parser.ts grammar/dasdpl.pegjs",
+    "build-application": "tsc",
+    "build": "npm run build-parser && npm run build-application"
   },
   "repository": {
     "type": "git",
